Updated with many-to-many relationship.
