# app/models/models.py
@@ -2,17 +2,28 @@ from config import db
 
 ASSET_TYPE = ["COMPRESSOR", "CHILLER", "FURNACE", "ROLLING_MILL"]
 
+association_table = db.Table(
+    'association',
+    db.Model.metadata,
+    db.Column('manager_id', db.Integer, db.ForeignKey('manager.manager_id')),
+    db.Column('site_id', db.Integer, db.ForeignKey('site.site_id'))
+)
 
-class Asset(db.Model):
-    """Class representing an industrial machine (chiller, compressor,...)
-    with its name, type and electrical power nominal."""
+class Manager(db.Model):
+    """Class representing an energy manager with his/her first name and last name."""
 
-    __tablename__ = "asset"
-    asset_id = db.Column(db.Integer, primary_key=True)
-    site_id = db.Column(db.Integer, db.ForeignKey("site.site_id"))
-    name = db.Column(db.String)
-    type = db.Column(db.String(30))
-    p_nominal = db.Column(db.Integer)
+    __tablename__ = "manager"
+    manager_id = db.Column(db.Integer, primary_key=True)
+    lname = db.Column(db.String(32))
+    fname = db.Column(db.String(32))
+    sites = db.relationship(
+        "Site",
+        secondary=association_table,
+        #backref=db.backref('managers', lazy = 'dynamic')
+        backref='managers',
+        #back_populates="managers",
+        #cascade="all, delete"
+    )
 
 
 class Site(db.Model):
@@ -21,7 +32,6 @@ class Site(db.Model):
 
     __tablename__ = "site"
     site_id = db.Column(db.Integer, primary_key=True)
-    manager_id = db.Column(db.Integer, db.ForeignKey("manager.manager_id"))
     name = db.Column(db.String)
     address = db.Column(db.String(120))
     p_max = db.Column(db.Integer)
@@ -34,17 +44,20 @@ class Site(db.Model):
     )
 
 
-class Manager(db.Model):
-    """Class representing an energy manager with his/her first name and last name."""
+class Asset(db.Model):
+    """Class representing an industrial machine (chiller, compressor,...)
+    with its name, type and electrical power nominal."""
 
-    __tablename__ = "manager"
-    manager_id = db.Column(db.Integer, primary_key=True)
-    lname = db.Column(db.String(32))
-    fname = db.Column(db.String(32))
-    sites = db.relationship(
-        'Site',
-        backref='manager',
-        cascade='all, delete, delete-orphan',
-        single_parent=True,
-        order_by='desc(Site.name)',
-    )
+    __tablename__ = "assets"
+    asset_id = db.Column(db.Integer, primary_key=True)
+    site_id = db.Column(db.Integer, db.ForeignKey('site.site_id'))
+    name = db.Column(db.String)
+    type = db.Column(db.String(30))
+    p_nominal = db.Column(db.Integer)
+
+
+#m = Manager()
+#s = Site()
+#m.sites.append(s)
+#db.session.add(m)
+#db.session.commit()
