# build_database.py
@@ -2,8 +2,13 @@ import os
 from config import db
 from app.models.models import Manager, Site, Asset
 
+
+nicolas = Manager(fname="Nicolas", lname="Plain")
+james = Manager(fname="James", lname="Brown")
+mary = Manager(fname="Mary", lname="Miller")
+
 # Data to initialize database with
-SITES1 = [
+SITES = [
     {
         "name": "Orsay" ,
         "address": "20 rue de Paris",
@@ -11,7 +16,8 @@ SITES1 = [
         "assets": [
             ("C1", "COMPRESSOR", 2000),
             ("C2", "COMPRESSOR", 3000),
-        ]
+        ],
+        "managers": [nicolas, james, mary]
     },
     {
         "name": "Tarnos",
@@ -21,28 +27,16 @@ SITES1 = [
             ("C1", "CHILLER", 2000),
             ("C2", "CHILLER", 4000),
             ("C2", "CHILLER", 1000),
-        ]
+        ],
+        "managers": [nicolas, james]
     },
-]
-SITES2 = [
     {
         "name": "Paris",
-        "address":  "30 rue de Gramont",
+        "address": "30 rue de Gramont",
         "p_max": 0,
-        "assets": []
+        "assets": [],
+        "managers": [mary]
     }
-]
-MANAGERS = [
-    {
-        "fname": "Nicolas",
-        "lname": "Plain",
-        "sites": SITES1,
-    },
-    {
-        "fname": "Jack",
-        "lname": "Thomson",
-        "sites": SITES2,
-    },
 ]
 
 if os.path.exists('database.db'):
@@ -50,18 +44,15 @@ if os.path.exists('database.db'):
 
 db.create_all()
 
-for manager in MANAGERS:
-    data = Manager(lname=manager['lname'], fname=manager['fname'])
+for data in SITES:
+    site = Site(name=data['name'], address=data['address'], p_max=data['p_max'])
 
-    for site in manager.get("sites"):
-        data_site = Site(name=site['name'], address=site['address'], p_max=site['p_max'])
+    for manager in data.get("managers"):
+        site.managers.append(manager)
 
-        for asset in site.get("assets"):
-            name, type, p_nominal = asset
-            data_site.assets.append(
-                Asset(name=name, type=type, p_nominal=p_nominal)
-            )
+    for asset in data.get("assets"):
+        name, type, p_nominal = asset
+        site.assets.append(Asset(name=name, type=type, p_nominal=p_nominal))
 
-        data.sites.append(data_site)
-    db.session.add(data)
+    db.session.add(site)
 db.session.commit()
