# swagger.yml
@@ -2,7 +2,7 @@ swagger: "2.0"
 info:
   description: This is the swagger file that goes with the server code
   version: "1.0.0"
-  title: Swagger Rest Article
+  title: Swagger Test Python Flask
 consumes:
   - application/json
 produces:
@@ -85,7 +85,7 @@ paths:
                       type: integer
                       description: Id of this site
 
-  /managers/{manager_id}:
+  /manager/{manager_id}:
     get:
       operationId: app.controllers.manager_controller.read_one
       tags:
@@ -187,11 +187,11 @@ paths:
       operationId: app.controllers.site_controller.read_all
       tags:
         - Site
-      summary: Read the entire set of sites for all managers, sorted by name
-      description: Read the entire set of sites for all managers, sorted by name
+      summary: Read the entire set of sites, sorted by name
+      description: Read the entire set of sites, sorted by name
       responses:
         200:
-          description: Successfully read sites for all managers operation
+          description: Successfully read sites
           schema:
             type: array
             items:
@@ -208,80 +208,29 @@ paths:
                 p_max:
                   type: integer
                   description: maximum electrical power of this site
-                manager:
-                  type: object
-                  description: Manager associsted to the site
-                  properties:
-                    manager_id:
-                      type: integer
-                      description: Id of associated manager
                 assets:
-                  type: array
+                  type: object
                   description: List of assets associsted to the site
                   properties:
                     asset_id:
                       type: integer
                       description: Id of the asset
-
-  /managers/{manager_id}/sites:
-    get:
-      operationId: app.controllers.site_controller.read_all_for_one
-      tags:
-        - Site
-      summary: Read the set of sites for one manager, sorted by name
-      description: Read the set of sites for one manager, sorted by name
-      parameters:
-        - name: manager_id
-          in: path
-          description: Id of manager associated with site
-          type: integer
-          required: True
-      responses:
-        200:
-          description: Successfully read sites for one manager operation
-          schema:
-            type: array
-            items:
-              properties:
-                site_id:
-                  type: integer
-                  description: Id of the site
-                name:
-                  type: string
-                  description: name of this site
-                address:
-                  type: string
-                  description: address of this site
-                p_max:
-                  type: integer
-                  description: maximum electrical power of this site
-                manager:
-                  type: object
-                  description: Manager associsted to the site
-                  properties:
-                    manager_id:
+                    name:
+                      type: string
+                      description: Name of the asset
+                    type:
+                      type: string
+                      description: Type of the asset
+                    p_nominal:
                       type: integer
-                      description: Id of associated manager
-                assets:
-                  type: array
-                  description: List of assets associsted to the site
-                  properties:
-                    asset_id:
-                      type: integer
-                      description: Id of the asset
-
+                      description: Nominal electrical power of the asset
     post:
       operationId: app.controllers.site_controller.create
       tags:
         - Site
-      summary: Create a site associated with a manager
-      description: Create a site associated with a manager
+      summary: Create a new site
+      description: Create a new site
       parameters:
-        - name: manager_id
-          in: path
-          description: Id of manager associated with site
-          type: integer
-          required: True
         - name: site
           in: body
           description: Text content of the site to create
@@ -316,34 +265,31 @@ paths:
               p_max:
                 type: integer
                 description: maximum electrical power of this site
-              manager:
-                type: object
-                description: Manager associsted to the site
-                properties:
-                  manager_id:
-                    type: integer
-                    description: Id of associated manager
               assets:
-                type: array
+                type: object
                 description: List of assets associsted to the site
                 properties:
                   asset_id:
                     type: integer
                     description: Id of the asset
+                  name:
+                    type: string
+                    description: Name of the asset
+                  type:
+                    type: string
+                    description: Type of the asset
+                  p_nominal:
+                    type: integer
+                    description: Nominal electrical power of the asset
 
-  /managers/{manager_id}/sites/{site_id}:
+  /site/{site_id}:
     get:
       operationId: app.controllers.site_controller.read_one
       tags:
         - Site
-      summary: Read a particular site associated with a manager
-      description: Read a particular site associated with a manager
+      summary: Read a particular site
+      description: Read a particular site
       parameters:
-        - name: manager_id
-          in: path
-          description: Id of manager associated with site
-          type: integer
-          required: True
         - name: site_id
           in: path
           description: Id of site
@@ -351,7 +297,7 @@ paths:
           required: True
       responses:
         200:
-          description: Successfully read site for a manager
+          description: Successfully read a site
           schema:
             type: object
             properties:
@@ -367,36 +313,32 @@ paths:
               p_max:
                 type: integer
                 description: maximum electrical power of this site
-              manager:
-                type: object
-                description: Manager associsted to the site
-                properties:
-                  manager_id:
-                    type: integer
-                    description: Id of associated manager
               assets:
-                type: array
+                type: object
                 description: List of assets associsted to the site
                 properties:
                   asset_id:
                     type: integer
                     description: Id of the asset
-
+                  name:
+                    type: string
+                    description: Name of the asset
+                  type:
+                    type: string
+                    description: Type of the asset
+                  p_nominal:
+                    type: integer
+                    description: Nominal electrical power of the asset
     put:
       operationId: app.controllers.site_controller.update
       tags:
         - Site
-      summary: Update a site associated with a manager
-      description: Update a site associated with a manager
+      summary: Update a site
+      description: Update a site
       parameters:
-        - name: manager_id
-          in: path
-          description: Id the manager to update
-          type: integer
-          required: True
         - name: site_id
           in: path
-          description: Id of the site associated with a manager
+          description: Id of the site
           type: integer
           required: True
         - name: site
@@ -406,13 +348,13 @@ paths:
             properties:
               name:
                 type: string
-                description: name of this site to update
+                description: Name of this site to update
               address:
                 type: string
-                description: address of this site to update
+                description: Address of this site to update
               p_max:
                 type: integer
-                description: maximum electrical power of this site to update
+                description: Maximum electrical power of this site to update
       responses:
         200:
           description: Successfully updated site
@@ -423,40 +365,36 @@ paths:
                 description: Id of the site
               name:
                 type: string
-                description: name of this site
+                description: Name of this site
               address:
                 type: string
-                description: address of this site
+                description: Address of this site
               p_max:
                 type: integer
-                description: maximum electrical power of this site
-              manager:
-                type: object
-                description: Manager associsted to the site
-                properties:
-                  manager_id:
-                    type: integer
-                    description: Id of associated manager
+                description: Maximum electrical power of this site
               assets:
-                type: array
+                type: object
                 description: List of assets associsted to the site
                 properties:
                   asset_id:
                     type: integer
                     description: Id of the asset
-
+                  name:
+                    type: string
+                    description: Name of the asset
+                  type:
+                    type: string
+                    description: Type of the asset
+                  p_nominal:
+                    type: integer
+                    description: Nominal electrical power of the asset
     delete:
       operationId: app.controllers.site_controller.delete
       tags:
         - Site
-      summary: Delete a site associated with a manager
-      description: Delete a site associated with a manager
+      summary: Delete a site
+      description: Delete a site
       parameters:
-        - name: manager_id
-          in: path
-          description: Id of manager associated with site
-          type: integer
-          required: True
         - name: site_id
           in: path
           description: Id of site
@@ -466,85 +404,7 @@ paths:
         200:
           description: Successfully deleted a site
 
-  /assets:
-    get:
-      operationId: app.controllers.asset_controller.read_all
-      tags:
-        - Asset
-      summary: Read the entire set of sites for all sites, sorted by name
-      description: Read the entire set of sites for all sites, sorted by name
-      responses:
-        200:
-          description: Successfully read sites for all sites operation
-          schema:
-            type: array
-            items:
-              properties:
-                asset_id:
-                  type: integer
-                  description: Id of the asset
-                name:
-                  type: string
-                  description: name of this asset
-                type:
-                  type: string
-                  description: type of this asset
-                p_nominal:
-                  type: integer
-                  description: monimal electrical power of this site
-                site:
-                  type: object
-                  description: Site associsted to the asset
-                  properties:
-                    site_id:
-                      type: integer
-                      description: Id of associated site
-
-  /managers/{manager_id}/sites/{site_id}/assets:
-    get:
-      operationId: app.controllers.asset_controller.read_all_for_one
-      tags:
-        - Asset
-      summary: Read the set of assets for one site, sorted by name
-      description: Read the set of assets for one site, sorted by name
-      parameters:
-        - name: manager_id
-          in: path
-          description: Id of associated manager
-          type: integer
-          required: True
-        - name: site_id
-          in: path
-          description: Id of associated site
-          type: integer
-          required: True
-      responses:
-        200:
-          description: Successfully read assets for one site operation
-          schema:
-            type: array
-            items:
-              properties:
-                asset_id:
-                  type: integer
-                  description: Id of the asset
-                name:
-                  type: string
-                  description: Name of the asset
-                type:
-                  type: string
-                  description: Type of the asset
-                p_nominal:
-                  type: integer
-                  description: Nominal electrical power of the asset
-                site:
-                  type: object
-                  description: Site associsted to the asset
-                  properties:
-                    site_id:
-                      type: integer
-                      description: Id of associated site
-
+  /site/{site_id}/add_asset:
     post:
       operationId: app.controllers.asset_controller.create
       tags:
@@ -552,11 +412,6 @@ paths:
       summary: Create an asset associated with a site
       description: Create an asset associated with a site
       parameters:
-        - name: manager_id
-          in: path
-          description: Id of associated manager
-          type: integer
-          required: True
         - name: site_id
           in: path
           description: Id of associated site
@@ -578,7 +433,6 @@ paths:
               p_nominal:
                 type: integer
                 description: Nominal electrical power of the asset
-
       responses:
         201:
           description: Successfully created an asset
@@ -597,75 +451,15 @@ paths:
               p_nominal:
                 type: integer
                 description: Nominal electrical power of the asset
-              site:
-                type: object
-                description: Site associsted to the asset
-                properties:
-                  site_id:
-                    type: integer
-                    description: Id of associated site
 
-  /managers/{manager_id}/sites/{site_id}/assets/{asset_id}:
-    get:
-      operationId: app.controllers.asset_controller.read_one
-      tags:
-        - Asset
-      summary: Read a particular asset associated with a site
-      description: Read a particular asset associated with a site
-      parameters:
-        - name: manager_id
-          in: path
-          description: Id of manager associated with site
-          type: integer
-          required: True
-        - name: site_id
-          in: path
-          description: Id of site associated with asset
-          type: integer
-          required: True
-        - name: asset_id
-          in: path
-          description: Id of asset
-          type: integer
-          required: True
-      responses:
-        200:
-          description: Successfully read asset for a site
-          schema:
-            type: object
-            properties:
-              asset_id:
-                type: integer
-                description: Id of the asset
-              name:
-                type: string
-                description: Name of the asset
-              type:
-                type: string
-                description: Type of the asset
-              p_nomial:
-                type: integer
-                description: Nominal electrical power of the asset
-              site:
-                type: object
-                description: Site associsted to the asset
-                properties:
-                  site_id:
-                    type: integer
-                    description: Id of associated site
-
+  /site/{site_id}/asset/{asset_id}:
     put:
       operationId: app.controllers.asset_controller.update
       tags:
         - Asset
-      summary: Update an asset associated with a manager
-      description: Update an asset associated with a manager
+      summary: Update an asset of a site
+      description: Update an asset of a site
       parameters:
-        - name: manager_id
-          in: path
-          description: Id of manager associated with site
-          type: integer
-          required: True
         - name: site_id
           in: path
           description: Id of site associated with asset
@@ -707,13 +501,6 @@ paths:
               p_nomial:
                 type: integer
                 description: Nominal electrical power of the asset
-              site:
-                type: object
-                description: Site associsted to the asset
-                properties:
-                  site_id:
-                    type: integer
-                    description: Id of associated site
 
     delete:
       operationId: app.controllers.asset_controller.delete
@@ -722,11 +509,6 @@ paths:
       summary: Delete an asset associated with a site
       description: Delete an asset associated with a site
       parameters:
-        - name: manager_id
-          in: path
-          description: Id of manager associated with site
-          type: integer
-          required: True
         - name: site_id
           in: path
           description: Id of site associated with asset
